# note.md

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md  README.zh-CN.note.md  chat.html  daily-notes.html  index.html  insights.html  logs.html  package.json  plugin-market.html  pnpm-lock.yaml  pnpm-workspace.yaml  preview.html  roam-import.html  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: 2026-07-12-写得更少的时代大纲的价值.md  2026-07-14-claude-idea-comment.md  2026-07-14-claude-idea-comment.note.md  2026-07-15-research-data-ownership-vs-lockin.md  2026-07-15-what-humans-do-while-agents-run.md  2026-07-16-sidex-plugin-spec-and-notemd-improvements.md  2026-07-21-decision-log-spec.md  2026-07-24-decision-log-design-review.md  2026-07-24-decision-log-v1.1-requirements.md  FAQ.md  SMOKE-TEST.md  decision-log-agent-edit-prompt.md  decision-log-agent-prompt.md  mode-selection.md  moraya-paste-reuse-analysis.md  note-recall-layer-design.md  note-recall-layer-discussion.md  note-recall-layer-discussion.note.md  plugin-v2-development.md  product-principle-mirror-hosted-marks.md  product-principle-one-vault-many-agents-you-orchestrate.md  product-principle-relationships-only-grow-where-confirmed.md  security-review-2026-07-24.md  (+1 more)
exlibris/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
exlibris/src-tauri/capabilities/: default.json
exlibris/src-tauri/src/: calibre.rs  fs_ops.rs  hash.rs  lib.rs  main.rs  shared_config.rs
exlibris/src-tauri/tests/fixtures/: ebook-convert-success.sh  ebook-meta-crash.sh  ebook-meta-success.sh
location-helper/: Cargo.toml  Info.plist  build.rs
location-helper/src/: main.rs
md2pdf/: Cargo.toml  manifest.v2.json
md2pdf/assets/: pdf.css
md2pdf/src/: ipc.rs  main.rs  pdf.rs  template.rs
md2pdf/tests/: smoke.rs  v2_smoke.rs
mdshare/: Cargo.toml
mdshare/src/: copy_link.rs  ipc.rs  main.rs  publish.rs  slug.rs  unpublish.rs
mdshare/tests/: integration.rs
notemd-plugin-sdk/: Cargo.toml
notemd-plugin-sdk/src/: lib.rs
plugin-protocol/: Cargo.toml
plugin-protocol/src/: lib.rs
plugins-src/exlibris/backend/: Cargo.toml
plugins-src/exlibris/backend/src/: calibre.rs  lib.rs  main.rs
plugins-src/exlibris/backend/tests/fixtures/: ebook-convert-slow.sh
plugins-src/openclaw/backend/: Cargo.toml
plugins-src/openclaw/backend/src/: config.rs  devices.rs  lib.rs  main.rs  pair.rs  protocol.rs  relay_bridge.rs  relay_client.rs  uds_client.rs
plugins-src/pos-log/backend/: Cargo.toml
plugins-src/pos-log/backend/src/: location.rs  logbook.rs  main.rs  plugin.rs
src-tauri/: Cargo.toml  Info.plist  build.rs  rust-toolchain.toml  tauri.conf.json  tauri.ios.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/plugins/: README.md
src-tauri/plugins/base/: manifest.json
src-tauri/plugins/folder-view/: manifest.json
src-tauri/plugins/git-history/: manifest.json
src-tauri/plugins/md2pdf/: bin-aarch64-apple-darwin  bin-x86_64-apple-darwin  manifest.json
src-tauri/plugins/openclaw-chat/: manifest.json
src-tauri/plugins/outline-notes/: manifest.json
src-tauri/plugins/reading-insights/: manifest.json
src-tauri/plugins/roam-import/: manifest.json
src-tauri/plugins/share/: bin-aarch64-apple-darwin  bin-x86_64-apple-darwin  manifest.json
src-tauri/plugins/sotvault/: manifest.json
src-tauri/resources/openclaw-plugin/: README.md  index.ts  openclaw.plugin.json  package.json  tsconfig.json
src-tauri/resources/openclaw-plugin/src/: auth.ts  channel.ts  config-schema.ts  protocol.ts  runtime.ts  session.ts  uds-server.ts
src-tauri/resources/themes/: default.css  effie.css
src-tauri/src/: app_dirs.rs  lib.rs  log_bus.rs  main.rs  pdf.rs  plugin_host.rs  plugin_host_ios.rs  shared_config.rs
src-tauri/src/agents_sync/: baseline.rs  logic.rs  mod.rs  watcher.rs
src-tauri/src/cli/: args.rs  builtin.rs  insights.rs  install.rs  mod.rs  openclaw.rs  router.rs  runner.rs  state.rs
src-tauri/src/git_history/: mod.rs
src-tauri/src/openclaw/: commands.rs  config.rs  devices.rs  mod.rs  pair.rs  protocol.rs  relay_bridge.rs  relay_client.rs  state.rs  uds_client.rs
src-tauri/src/plugin_runtime/: adapter.rs  commands.rs  discovery.rs  host_api.rs  installer.rs  lifecycle.rs  location.rs  market.rs  mod.rs  process.rs  protocol.rs  state.rs  ui_rpc.rs  windows.rs
src-tauri/src/preview_window/: mod.rs
src-tauri/src/sotvault/: logic.rs  mirror_meta.rs  mod.rs  store.rs  vault_settings.rs
src-tauri/src/themes/: appearance.rs  commands.rs  compiler.rs  header.rs  id.rs  import.rs  migration.rs  mod.rs  paths.rs  registry.rs  zip_safety.rs
src-tauri/src/vault_ios/: clone.rs  conflict.rs  keychain.rs  list_dir.rs  mod.rs  path.rs  sig.rs  sync.rs
src-tauri/src/vault_ios/tests/: mod.rs
src-tauri/src/vault_sync/: conflict.rs  git_ops.rs  large_files.rs  log_buffer.rs  mod.rs  service.rs  watcher.rs
src-tauri/templates/: AGENTS.md
src-tauri/tests/: cli_builtin_integration.rs  cli_startup_timing.rs  plugin_host_integration.rs  plugin_runtime_integration.rs  plugin_ui_integration.rs  startup_budget.rs  themes_appearance_test.rs  themes_compiler_test.rs  themes_header_test.rs  themes_id_test.rs  themes_import_test.rs  themes_migration_test.rs  themes_registry_test.rs  themes_zip_safety_test.rs
src-tauri/tests/fixtures/: crash.sh  echo.sh  garbage.sh  huge.sh  sleep.sh
src-tauri/tests/fixtures/perf_a/: manifest.json
src-tauri/tests/fixtures/perf_b/: manifest.json
src-tauri/tests/fixtures/perf_c/: manifest.json
src-tauri/tests/fixtures/perf_d/: manifest.json
src-tauri/tests/fixtures/perf_e/: manifest.json
src-tauri/tests/fixtures/pkg/: fixture.notemdpkg  fixture.notemdpkg.minisig  test.pub.b64
src-tauri/tests/fixtures/v2/: crash-activate.sh  crash-loop.sh  die-mid-request.sh  echo-env.sh  ok.sh  slow.sh  stream.sh
src-tauri/tests/fixtures/v2-ui/test.ui-fixture/current/: manifest.json
src-tauri/tests/fixtures/v2-ui/test.ui-fixture/current/ui/: app.js  index.html
vaultgitsync/: Cargo.toml
vaultgitsync/src/: config.rs  daemon.rs  git_ops.rs  main.rs  watcher.rs
(+869 files in other folders)
