[package]
name = "plugin-protocol"
version = "0.1.0"
edition = "2021"
description = "note.md plugin system v2 wire contract — single source of truth"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
semver = "1"

[dev-dependencies]
jsonschema = "0.18"
