[package]
name = "mdeditor"
version = "0.9.0"
edition = "2021"

[lib]
name = "mdeditor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# devtools is automatic in debug builds; do not include for release
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-deep-link = "2"
tokio = { version = "1", features = ["time", "process", "io-util", "macros", "rt-multi-thread", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lightningcss = "1.0.0-alpha.66"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
tempfile = "3.13"
clap = { version = "4", default-features = false, features = ["std", "help", "error-context", "usage"] }
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"

[profile.release]
opt-level = "z"       # optimize for size
lto = true            # link-time optimization across crates
codegen-units = 1     # one unit → better whole-program optimization
panic = "abort"       # no unwinding tables
strip = true          # strip debug symbols
incremental = false
