[package]
name = "mdeditor"
version = "3.17.9"
edition = "2021"

[lib]
name = "mdeditor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# devtools is automatic in debug builds; do not include for release
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-http = "2"
tauri-plugin-os = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tokio = { version = "1", features = ["time", "process", "io-util", "macros", "rt-multi-thread", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lightningcss = "1.0.0-alpha.66"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
tempfile = "3.13"
clap = { version = "4", default-features = false, features = ["std", "help", "error-context", "usage"] }
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }
dirs = "5"
# Pulled in transitively by reqwest (via tauri-plugin-http / tauri-plugin-updater).
# rustls 0.23 stopped auto-selecting a crypto provider; we install one explicitly
# at startup (see `lib::run`). Direct dep here so the version we install against
# matches what reqwest links.
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tokio-tungstenite = { version = "0.24", default-features = false, features = ["rustls-tls-webpki-roots", "connect"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
url = "2"
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
urlencoding = "2"
gethostname = "0.5"
rand = "0.8"

include_dir = "0.7"

[target.'cfg(any(target_os = "macos", target_os = "linux", target_os = "windows"))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"

[target.'cfg(target_os = "ios")'.dependencies]
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2", "vendored-openssl"] }

[target.'cfg(not(target_os = "ios"))'.dependencies]
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2", "vendored-openssl"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"       # optimize for size
lto = true            # link-time optimization across crates
codegen-units = 1     # one unit → better whole-program optimization
panic = "abort"       # no unwinding tables
strip = true          # strip debug symbols
incremental = false
