[package]
name = "notemd"
version = "6.721.8"
edition = "2021"

[lib]
# Keep the lib crate name stable: the iOS build links `libmdeditor_lib.a` and
# main.rs / all modules reference `mdeditor_lib::`. Only the binary is renamed.
name = "mdeditor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# devtools is automatic in debug builds; do not include for release
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-http = "2"
tauri-plugin-os = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tokio = { version = "1", features = ["time", "process", "io-util", "macros", "rt-multi-thread", "sync"] }
plugin-protocol = { path = "../plugin-protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lightningcss = "1.0.0-alpha.66"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
tempfile = "3.13"
clap = { version = "4", default-features = false, features = ["std", "help", "error-context", "usage"] }
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }
dirs = "5"
# Pulled in transitively by reqwest (via tauri-plugin-http / tauri-plugin-updater).
# rustls 0.23 stopped auto-selecting a crypto provider; we install one explicitly
# at startup (see `lib::run`). Direct dep here so the version we install against
# matches what reqwest links.
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
# Verify-only (pure Rust, zero-dep) minisign signature checking for the plugin
# installer (子项目③). Signing stays in release scripts via the minisign CLI.
minisign-verify = "0.2"
# semver comparison for the CLI `plugin update` newer-version decision (子项目③
# Task 3). Already in the lock via plugin-protocol / tauri; a direct dep lets
# cli/builtin.rs compare an index version against the installed one.
semver = "1"
diffy = "0.5"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
url = "2"
urlencoding = "2"
rand = "0.8"

[target.'cfg(any(target_os = "macos", target_os = "linux", target_os = "windows"))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
# Host-side CoreLocation for the `host.location.get` plugin API (pos-log etc.).
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-core-location = "0.3"
block2 = "0.6"

[target.'cfg(target_os = "ios")'.dependencies]
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2", "vendored-openssl"] }

[target.'cfg(not(target_os = "ios"))'.dependencies]
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2", "vendored-openssl"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"       # optimize for size
lto = true            # link-time optimization across crates
codegen-units = 1     # one unit → better whole-program optimization
panic = "abort"       # no unwinding tables
strip = true          # strip debug symbols
incremental = false
