[package]
name = "notemd-exlibris"
version = "1.0.0"
edition = "2021"

# The exlibris v2 backend: the whole import pipeline (calibre subprocess, atomic
# fs copy/rename, sha256 hashing, sotvault/rawvault listing, rules I/O) moved off
# Tauri onto notemd-plugin-sdk. Pure request-response — the UI drives every
# operation via `ui.request`; NO streaming (the frontend tracks import progress
# in local state). The shared config file is read/written IN-PROCESS at the same
# path the v1 app used (~/Library/Application Support/com.laobu.mdeditor-shared).
[[bin]]
name = "notemd-exlibris"
path = "src/main.rs"

[dependencies]
notemd-plugin-sdk = { path = "../../../notemd-plugin-sdk" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "io-util", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
quick-xml = { version = "0.36", features = ["serialize"] }
sha2 = "0.10"
hex = "0.4"
tempfile = "3"
dirs = "5"
walkdir = "2"
anyhow = "1"
thiserror = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
