[package]
name = "notemd-openclaw"
version = "0.1.0"
edition = "2021"

# The openclaw v2 backend: the whole UDS/relay/pair state machine moved off
# Tauri onto notemd-plugin-sdk. One long-running JSON-RPC service driven by
# `ui.request` from its window; streams frames back via `host.ui.post`.
[[bin]]
name = "notemd-openclaw"
path = "src/main.rs"

[dependencies]
notemd-plugin-sdk = { path = "../../../notemd-plugin-sdk" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots", "connect"] }
futures-util = "0.3"
url = "2"
urlencoding = "2"
qrcode = { version = "0.14", features = ["svg"] }
gethostname = "0.5"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
