[package]
name = "notemd-pos-log"
version = "1.0.0"
edition = "2021"

# pos-log v2 backend: a resident background plugin (no idle shutdown). Every
# 30 min it takes one CoreLocation fix + reverse geocode on the MAIN thread
# (CLGeocoder completion blocks land on the main dispatch queue, which only
# the main run loop drains); the SDK serve loop runs on a secondary thread.
# All vault IO goes through Host::request → host.vault.* (process-channel
# extension, see host_api::make_sink services param).
[[bin]]
name = "notemd-pos-log"
path = "src/main.rs"

[dependencies]
notemd-plugin-sdk = { path = "../../../notemd-plugin-sdk" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "io-util", "sync"] }
serde_json = "1"
chrono = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-core-location = "0.3"
block2 = "0.6"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
