[package]
name = "notemd-pos-log"
version = "1.0.0"
edition = "2021"

# pos-log v2 backend: a resident background plugin (no idle shutdown). Every
# 30 min (and on demand via "Save Location Now") it resolves the current place
# by IP geolocation (ip-api.com — no OS location permission; CoreLocation
# authorization proved unobtainable in the field). All vault IO goes through
# Host::request → host.vault.*.
[[bin]]
name = "notemd-pos-log"
path = "src/main.rs"

[dependencies]
notemd-plugin-sdk = { path = "../../../notemd-plugin-sdk" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "io-util", "sync"] }
serde_json = "1"
chrono = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
