[package]
name = "notemd-pos-log"
version = "1.0.0"
edition = "2021"

# pos-log v2 backend: a resident background plugin (no idle shutdown). Every
# 30 min (and on demand via the "Save Location Now" command) it asks the HOST
# for a location fix via `host.location.get` — the host does CoreLocation on
# its main thread because a bare plugin binary can't get macOS location
# authorization. All vault IO goes through Host::request → host.vault.*.
[[bin]]
name = "notemd-pos-log"
path = "src/main.rs"

[dependencies]
notemd-plugin-sdk = { path = "../../../notemd-plugin-sdk" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "io-util", "sync"] }
serde_json = "1"
chrono = "0.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
